assets/public/css/mailchimp-form.css
/**
    Mail Chimp Subscription form CSS
     */

.mailchimp_form_wrap {
    width: 75%;
    font-size: 20px;
    background: #333;
    margin: 0 auto;
    padding: 30px;
}

.mailchimp_form_wrap form {
    display: flex;
}

.mailchimp_form_wrap .input_container {
    flex-grow: 1;
    margin-right: 1px;
}

.mailchimp_form_wrap input,
.mailchimp_form_wrap button {
    font-size: 1em;
}

.mailchimp_form_wrap input:focus {
    outline: none;
}
.mailchimp_form_wrap input {
    border: 2px solid #ddd;
    background-color: #ddd;
    box-sizing: border-box;
    width:100%;
    padding: 0.5em;
}

.mailchimp_form_wrap button {
    padding: 2px 12px;
    flex-grow: 1;
    background: green;
    color: white;
    border: none;
    height: 48px;
}
.mailchimp_form_wrap .mailchim_row {
    width: 50%;
    display: inline-flex;
}

.mailchimp_form_wrap button:focus {
    outline: none;
}

.mailchimp_form_wrap button:focus {
    outline: none;
}

.mailchimp_form_wrap .error-message {
    color: red;
    text-align: center;
}
.mailchimp_form_wrap .loader{
    width: 100%;
    background: #fff;
    padding: 0;
    text-align: center;
    display: none;
}
.mailchimp_form_wrap .loader img{
    margin-bottom: 0;
    width: 115px;
}
.mailchimp_form_wrap .success-message h3{
    color: green;
    text-align: center;
}
.mailchimp_form_wrap button:hover {
    background: #000;
}
/**
CSS for mobile devices
 */
@media (max-width: 576px) {
    .mailchimp_form_wrap {
        width: 100% !important;
        font-size: 18px !important;
        padding: 5px !important;
    }
    .mailchimp_form_wrap .mailchim_row {
        width: 100%;
        display: block;
    }

    .mailchimp_form_wrap .input_container{
        margin: 5px;
    }
    .mailchimp_form_wrap input{
        margin-bottom: 10px;
    }
    button#mailchimp-submit {
        margin: 0 5px;
        width: 94%;
    }

}

